Add Japanese translations

--- a/assets/index.html
+++ b/assets/index.html
@@ -59,6 +59,7 @@
       <ul>
         <li><a href="/en"><span class="flag">🇬🇧</span> English</a></li>
         <li><a href="/de"><span class="flag">🇩🇪</span> Deutsch</a></li>
+        <li><a href="/ja"><span class="flag">🇯🇵</span> 日本語</a></li>
       </ul>
     </p>
   </div>
