--- a/assets/index.html
+++ b/assets/index.html
@@ -5,23 +5,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Zettlr Docs</title>
+
+  <!-- Get the font from Google -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+
   <style>
     * {
       box-sizing: border-box;
     }
 
     html, body {
-      font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+      font-family: 'Noto Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
     body {
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
+      margin: 0;
+      padding: 0;
+      background-image: linear-gradient(90deg, #ddd 0%, #fff 20%, #fff 80%, #ddd 100%);
+    }
+
+    div#header {
+      background-color: #333;
+      color: white;
+      padding-left: 35vw;
+    }
+
+    h1#main-head {
+      line-height: 1.5em;
+      margin: 0px;
+      padding: 10px;
+    }
+
+    img#main-logo {
+      height: 1.5em;
+      vertical-align: top;
     }
 
     .container {
       width: 30vw;
       margin: 0 auto;
+    }
+
+    /* Make sure the page also works on smaller screens */
+    @media (max-width: 800px) {
+      .container { width: 90vw; }
+      div#header { padding-left: 5vw; }
+    }
+
+    div#navigation {
+      padding-bottom: 10px;
+    }
+
+    div#navigation a {
+      display: inline-block;
+      color: #1cb27e;
+      text-decoration: none;
+      padding: 2px;
+      border-radius: 2px;
+    }
+
+    div#navigation a:hover {
+      background-color: #1cb27e;
+      color: white;
     }
 
     .container ul {
@@ -30,37 +77,50 @@
       padding: 0;
     }
 
-    .container ul li a {
+    a.button-link {
       text-decoration: none;
       display: inline-block;
       width: 100%;
       text-align: center;
       margin: 5px;
       padding: 10px;
-      border: 1px solid #aaaaaa;
+      border: 1px solid #333;
       border-radius: 5px;
       transition: 0.2s all ease;
       color: #333;
     }
 
-    .container ul li a:hover {
-      background-color: rgba(140, 150, 140, 1);
+    a.button-link:hover {
+      background-color: #1cb27e;
+      border-color: #1cb27e;
       color: white;
     }
   </style>
 </head>
 <body>
+  <!-- Pull the main-head out of the container for a nicer visual effect -->
+  <div id="header">
+    <h1 id="main-head">
+      <img src="logo.png" alt="Zettlr" id="main-logo">
+      Zettlr Docs
+    </h1>
+    <div id="navigation">
+      <a href="https://www.zettlr.com/" target="_blank">Homepage</a> &bullet;
+      <a href="https://www.zettlr.com/download" target="_blank">Download</a> &bullet;
+      <a href="https://github.com/Zettlr/zettlr-docs" target="_blank">GitHub</a>
+    </div>
+  </div>
+
   <div class="container">
-    <h1>Zettlr Docs</h1>
     <p>
       Please select your language.
     </p>
     <p>
       <ul>
-        <li><a href="/en"><span class="flag">🇬🇧</span> English</a></li>
-        <li><a href="/de"><span class="flag">🇩🇪</span> Deutsch</a></li>
-        <li><a href="/ja"><span class="flag">🇯🇵</span> 日本語</a></li>
-        <li><a href="/it"><span class="flag">🇮🇹</span> Italiano</a></li>
+        <li><a href="/en" class="button-link"><span class="flag">🇬🇧</span> English</a></li>
+        <li><a href="/de" class="button-link"><span class="flag">🇩🇪</span> Deutsch</a></li>
+        <li><a href="/ja" class="button-link"><span class="flag">🇯🇵</span> 日本語</a></li>
+        <li><a href="/it" class="button-link"><span class="flag">🇮🇹</span> Italiano</a></li>
       </ul>
     </p>
   </div>
