Add French translation

--- a/assets/index.html
+++ b/assets/index.html
@@ -121,6 +121,7 @@
         <li><a href="/de" class="button-link"><span class="flag">🇩🇪</span> Deutsch</a></li>
         <li><a href="/ja" class="button-link"><span class="flag">🇯🇵</span> 日本語</a></li>
         <li><a href="/it" class="button-link"><span class="flag">🇮🇹</span> Italiano</a></li>
+        <li><a href="/fr" class="button-link"><span class="flag">🇫🇷</span> Français</a></li>
       </ul>
     </p>
   </div>
