--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Zettlr Docs</title>
+  <meta name="description" content="Learn how to use Zettlr with the official documentation. Available in multiple languages.">
+  
+  <!-- JSON LD data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Zettlr",
+    "url": "https://www.zettlr.com",
+    "logo": "https://zettlr.com/themes/zettlr/assets/img/256x256.png",
+    "sameAs": [
+      "https://www.twitter.com/zettlr",
+      "https://facebook.com/zettlrapp",
+      "https://www.youtube.com/channel/UCso4Cjcv5gNt9LVBEZWi1cw",
+      "https://www.linkedin.com/company/zettlr",
+      "https://github.com/Zettlr/"
+    ]
+  }
+  </script>
 
   <!-- Get the font from Google -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
