Small change to trigger workflow

--- a/assets/index.html
+++ b/assets/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Zettlr Docs</title>
-  <meta name="description" content="Learn how to use Zettlr with the official documentation. Available in multiple languages.">
+  <meta name="description" content="The official documentation for the Zettlr Markdown editor. Available in multiple languages.">
   
   <!-- JSON LD data -->
   <script type="application/ld+json">
