--- a/assets/index.html
+++ b/assets/index.html
@@ -141,7 +141,7 @@
         <li><a href="/ja" class="button-link"><span class="flag">🇯🇵</span> 日本語</a></li>
         <li><a href="/it" class="button-link"><span class="flag">🇮🇹</span> Italiano</a></li>
         <li><a href="/fr" class="button-link"><span class="flag">🇫🇷</span> Français</a></li>
-        <li><a href="/es" class="button-link"><span class="flag">ES</span> Español</a></li>
+        <li><a href="/es" class="button-link"><span class="flag">🇪🇸</span> Castellano</a></li>
       </ul>
     </p>
   <p>
