--- a/assets/index.html
+++ b/assets/index.html
@@ -126,6 +126,8 @@
     <div id="navigation">
       <a href="https://www.zettlr.com/" target="_blank">Homepage</a> &bullet;
       <a href="https://www.zettlr.com/download" target="_blank">Download</a> &bullet;
+      <a href="https://discord.gg/PcfS3DM9Xj" target="_blank">Discord</a> &bullet;
+      <a href="https://www.reddit.com/r/Zettlr/" target="_blank">Reddit</a> &bullet;
       <a href="https://github.com/Zettlr/zettlr-docs" target="_blank">GitHub</a>
     </div>
   </div>
@@ -144,18 +146,6 @@
         <li><a href="/es" class="button-link"><span class="flag">🇪🇸</span> Castellano</a></li>
       </ul>
     </p>
-  <p>
-    <strong>
-      Please note that the documentation is currently being updated to properly document the features of Zettlr 2.0. Until this message disappears,
-      there may be inconsistencies. If you are unsure if a specific feature or aspect is simply not properly documented or whether it may be buggy,
-      please refrain from opening up new issues directly and ask on our
-      <a href="https://discord.gg/PcfS3DM9Xj">Discord</a>
-      or
-      <a href="https://www.reddit.com/r/Zettlr/">Reddit</a>
-      first. This will make it easier for us to quickly update
-      the documentation or fix the application without having to micro manage issues. Thank you very much for your understanding!
-    </strong>
-  </p>
   </div>
 </body>
 </html>
