--- a/assets/index.html
+++ b/assets/index.html
@@ -140,6 +140,7 @@
       <ul>
         <li><a href="/en" class="button-link"><span class="flag">🇬🇧</span> English</a></li>
         <li><a href="/de" class="button-link"><span class="flag">🇩🇪</span> Deutsch</a></li>
+        <li><a href="/zh-CN" class="button-link"><span class="flag">zh-CN</span> 简体中文</a></li>
         <li><a href="/ja" class="button-link"><span class="flag">🇯🇵</span> 日本語</a></li>
         <li><a href="/it" class="button-link"><span class="flag">🇮🇹</span> Italiano</a></li>
         <li><a href="/fr" class="button-link"><span class="flag">🇫🇷</span> Français</a></li>
