fix: Improve communication/UX

--- a/assets/index.html
+++ b/assets/index.html
@@ -172,12 +172,17 @@
   
     <section role="main">
       <p>
-        Please select your language. English is the official documentation, all
-        other languages are community translations.
+        Please select your language.
       </p>
+      <h2>Official Documentation</h2>
       <p>
         <ul>
           <li><a href="/en" class="button-link"><span class="flag">🇬🇧</span> English</a></li>
+        </ul>
+      </p>
+      <h2>Community Translations</h2>
+      <p>
+        <ul>
           <li><a href="/de" class="button-link"><span class="flag">🇩🇪</span> Deutsch</a></li>
           <li><a href="/ja" class="button-link"><span class="flag">🇯🇵</span> 日本語</a></li>
           <li><a href="/it" class="button-link"><span class="flag">🇮🇹</span> Italiano</a></li>
