fix: Add russian to landing page

--- a/assets/index.html
+++ b/assets/index.html
@@ -164,7 +164,7 @@
       <nav role="navigation">
         <a href="https://www.zettlr.com/" target="_blank">Homepage</a> &bullet;
         <a href="https://www.zettlr.com/download" target="_blank">Download</a> &bullet;
-        <a href="https://discord.gg/PcfS3DM9Xj" target="_blank">Discord</a> &bullet;
+        <a href="https://go.zettlr.com/discord/" target="_blank">Discord</a> &bullet;
         <a href="https://www.reddit.com/r/Zettlr/" target="_blank">Reddit</a> &bullet;
         <a href="https://github.com/Zettlr/zettlr-docs" target="_blank">GitHub</a>
       </nav>
@@ -188,6 +188,7 @@
           <li><a href="/it" class="button-link"><span class="flag">🇮🇹</span> Italiano</a></li>
           <li><a href="/fr" class="button-link"><span class="flag">🇫🇷</span> Français</a></li>
           <li><a href="/es" class="button-link"><span class="flag">🇪🇸</span> Castellano</a></li>
+          <li><a href="/ru" class="button-link"><span class="flag">🇷🇺</span> Русский</a></li>
         </ul>
       </p>
     </section>
