feat: Style HLJS and blockquote reset

--- a/theme_override/main.html
+++ b/theme_override/main.html
@@ -19,3 +19,10 @@
 <noscript><p><img src="https://matomo.zettlr.com/matomo.php?idsite=7&amp;rec=1" style="border:0;" alt="" /></p></noscript>
 <!-- End Matomo Code -->
 {% endblock %}
+
+{% block extrahead %}
+{%- if config.theme.highlightjs %}
+<link id="hljs-light" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/{{ config.theme.hljs_style }}.min.css" {% if config.theme.color_mode != "light" %}disabled{% endif %}>
+<link id="hljs-dark" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/{{ config.theme.hljs_style_dark }}.min.css" {% if config.theme.color_mode != "dark" %}disabled{% endif %}>
+{%- endif %}
+{% endblock %}
